--- a/tex/selection.tex
+++ b/tex/selection.tex
@@ -9,7 +9,7 @@ procedures are adopted in order to obtain the best precision
 achievable in both scenarios. The general strategy is illustrated in
 Sec.~\ref{sec:genstrategy}, while the event
 selection criteria and the signal and background modeling are
-described in Sec.~\ref{sec:evtsel} and~\ref{sec:bckgmodel},
+described in Secs.~\ref{sec:evtsel} and~\ref{sec:bckgmodel},
 respectively, detailing the specific choices for each analysis. The
 comparison between data and prediction is shown in
 Sec.~\ref{sec:datamc}, and the sources of systematic uncertainty are
@@ -753,7 +753,7 @@ jets with $\pt=500\GeV$, as shown in Fig.~\ref{fig:jessyst}.
   \includegraphics[width=0.495\textwidth]{figures/selection/systs/jessystpt}
   \includegraphics[width=0.495\textwidth]{figures/selection/systs/jessysteta}
   \caption{
-    Different components of the JES uncertainty as a function of \pt{}
+    Different components of the fractional JES uncertainty as a function of \pt{}
     (left) and $\eta$ (right).
   }
   \label{fig:jessyst}
