--- a/tex/appendix_results_table.tex
+++ b/tex/appendix_results_table.tex
@@ -18,11 +18,14 @@ PDF                                     & $<0.005$ & $<0.004$ & $<0.005$ & $<0.0
 $W$+jets normalization        & $<0.005$ & $<0.004$ & $<0.005$ & $<0.005$ & $<0.005$ \\
 \midrule
 Statistical uncertainty                    & 0.05 &        0.04 &        0.05  &       0.05   &   0.05    \\
+\midrule
+Total uncertainty                    & 0.06 &        0.04 &        0.05  &       0.05   &   0.05    \\
 \bottomrule
 \end{tabular}
 \caption{Impact of individual sources of uncertainty on
   \ac{} measured as a function of \mtt{} at \seventev{}. Variations below 10\%
-  of the statistical uncertainty are considered negligible.}
+  of the statistical uncertainty are considered negligible. The total uncertainty obtained from the
+  marginalization procedure is quoted for reference.}
 \label{table:Systematics_mtt}
 \end{table}
 
@@ -44,12 +47,16 @@ MC statistics                 & $<0.005$ & $<0.006$ & $<0.003$  \\
 PDF                                     & $<0.005$ & $<0.006$ & $<0.003$  \\
 $W$+jets normalization        & $<0.005$ & $<0.006$ & $<0.003$  \\
 \midrule
-Statistical uncertainty                 & 0.05   &        0.06      &        0.034     \\
+Statistical uncertainty                 & 0.05   &        0.06      &
+0.034     \\
+\midrule
+Total uncertainty                 & 0.05   &        0.06      &        0.034     \\
 \bottomrule
 \end{tabular}
 \caption{Impact of individual sources of uncertainty on
   \ac{} measured as a function of \pttt{} at \seventev{}. Variations below 10\%
-  of the statistical uncertainty are considered negligible.}
+  of the statistical uncertainty are considered negligible. The total uncertainty obtained from the
+  marginalization procedure is quoted for reference.}
 \label{table:Systematics_pttt}
 \end{table}
 
@@ -72,11 +79,14 @@ PDF                                     & $<0.004$ & $<0.003$ & $<0.003$  \\
 $W$+jets normalization        & $<0.004$ & $<0.003$ & $<0.003$  \\
 \midrule
 Statistical uncertainty                 & 0.04       &        0.030      &        0.025     \\
+\midrule
+Total uncertainty                 & 0.04       &        0.031      &        0.025     \\
 \bottomrule
 \end{tabular}
 \caption{Impact of individual sources of uncertainty on
-  \ac{} measured as a function of |\ytt{}| at \seventev{}. Variations below 10\%
-  of the statistical uncertainty are considered negligible.}
+  \ac{} measured as a function of $|\ytt{}|$ at \seventev{}. Variations below 10\%
+  of the statistical uncertainty are considered negligible. The total uncertainty obtained from the
+  marginalization procedure is quoted for reference.}
 \label{table:Systematics_ytt}
 \end{table}
 
@@ -99,12 +109,15 @@ PDF                                     & $<0.008$ & $<0.007$ & $<0.007$ & $<0.0
 $W$+jets normalization        & $<0.008$ & $<0.007$ & $<0.007$ & $<0.010$ & $<0.013$ \\
 \midrule
 Statistical uncertainty       & 0.08             &        0.07      &        0.07      &       0.10       &         0.13     \\
+\midrule
+Total uncertainty       & 0.08             &        0.07      &        0.07      &       0.10       &         0.13     \\
 \bottomrule
 \end{tabular}
 \caption{Impact of individual sources of uncertainty on
   \ac{} measured as a function of \mtt{} at \seventev{}, with the additional
   requirement $\betatt{}>0.6$. Variations below 10\%
-  of the statistical uncertainty are considered negligible.}
+  of the statistical uncertainty are considered negligible. The total uncertainty obtained from the
+  marginalization procedure is quoted for reference.}
 \label{table:Systematics_mtt_beta}
 \end{table}
 
@@ -136,7 +149,7 @@ Statistical uncertainty       & 0.08             &        0.07      &        0.0
   \bottomrule
 \end{tabular}
 \caption{Correlation coefficients for the \ac{} values measured as a
-  function of |\ytt{}| at \seventev{}.}
+  function of $|\ytt{}|$ at \seventev{}.}
 \label{tab:corr_ytt}
 \end{table}
 
