--- a/tex/reconstruction.tex
+++ b/tex/reconstruction.tex
@@ -4,17 +4,19 @@
 As discussed in Sec.~\ref{sec:genstrategy}, the \ac{} measurement relies on
 the event--by--event reconstruction of the four--momenta of the
 \ttbar{} pair. Inferring the four--momenta from the
-reconstructed objects presents the challenges of associating jets with
-the partons from which they originated, reconstructing the
-four--momentum of the neutrino from the missing transverse momentum
-and pairing the $b$--jets with the decay products of the correct $W$
-boson. The task is complicated by the presence of additional jets from
-initial and final state radiation and by the large uncertainty on the
-jet energy determination. 
-This section describes a likelihood fit procedure that exploits the
-kinematic and experimental handles to associate the reconstructed
-objects to the final state particles of the semi--leptonic \ttbar{}
-decay and obtain the four--momenta of the top quark and antiquark.
+reconstructed objects presents several challenges such as the
+association of jets with
+the partons from which they originated, the reconstruction of the
+four--momentum of the neutrino from the missing transverse momentum,
+and the pairing of $b$--jets with the decay products of the correct $W$
+boson to form the top quark. The task is further complicated by the
+presence of additional jets from initial and final state radiation and
+by the large uncertainty on the jet energy determination. 
+This section describes a likelihood fit procedure that exploits
+several experimental quantities and kinematic constraints to associate
+the reconstructed objects to the final state particles of the
+semi--leptonic \ttbar{} decay and obtain an estimation of the
+four--momenta of the top quark and antiquark. 
 
 \section{Kinematic fit}
 
@@ -51,7 +53,7 @@ where:
 \item $\mathcal{W}$s are probability densities, referred to as {\it
     transfer functions}, mapping the measured energy of a
   reconstructed object to the energy of the corresponding final state
-  particle.
+  particle. They are measured on a sample of simulated \ttbar{} events.
 \item The mass and width of the $W$ boson and of the top quark are set
   to their measured values $m_W = 80.4~\GeV{}$, $\Gamma_W = 2.1~\GeV{}$, $m_t =
        172.5~\GeV{}$, and $\Gamma_t = 1.5~\GeV{}$. 
@@ -62,11 +64,12 @@ where:
 
 The likelihood is evaluated for all permutations of four reconstructed
 jets assigned to the four partons.
-In events where five or more jets were reconstructed, only
-the five jets are considered. In the analysis at \seventev{} the five
-highest--\pt{} jets are used, while, at \eighttev{}, the two jets with the
-highest $b$--tagging weight are always considered, in order to ensure
-a better reconstruction in the sample with at least two $b$--jets.
+In events where five or more jets were reconstructed, only a maximum
+of five jets are considered. In the analysis at \seventev{} the five
+highest--\pt{} jets are used, while, in the analysis at \eighttev{}, the two jets with
+the highest $b$--tagging weight are always considered, in order to ensure
+a better reconstruction in the sample with at least two $b$--jets. The
+three remaining jets selected in \pt{}--order.
 Out of all the possible permutations, the combination giving the
 highest likelihood, after maximization over the free parameters, is chosen.
 The role of the probability term $P(b-\textrm{tag} ~|
@@ -121,7 +124,7 @@ example, the transfer functions for electrons and for $b$ quarks.
 Due to selection, resolution and combinatorics effects, the efficiency
 of reconstructing a \ttbar{} pair matching\footnote{A reconstructed
   object $i$ is considered matched with a parton $j$ if the condition
-  $\deltaR{i}{j}<0.2$ is satisfied.} the original partons is
+  $\deltaR{i}{j}<0.2$ is satisfied.} the original top quark and antiquark is
 $25\%$. The dominant cause of mis--reconstruction is the wrong jet
 assignment to the corresponding \ttbar{} final state parton. This
 typically occurs in three cases:
@@ -130,25 +133,25 @@ typically occurs in three cases:
   parton does not satisfy the reconstruction requirements, such as
   $\pt{}>25 \GeV$ or pseudo--rapidity within the $|\eta|<2.5$ range.
   The fraction of events where all \ttbar{} final state partons are
-  reconstructed as jets is $25-40\%$, depending on the $b$--jets
-  requirement.
-\item {\it jets outside selection}: given that five jets are
+  reconstructed as jets is $25$ and $40\%$, for the samples with 1 and
+  at least 2 $b$--jets, respectively.
+\item {\it jets outside selection}: given that up to five jets are
   considered, in events with more
   than five jets, some of the jets corresponding to
   the \ttbar{} decay are not used in the reconstruction algorithm.
-  While events with high jet multiplicity are rare, for those events
-  this occurs approximately $50\%$ of the times and all matched jets
-  within acceptance.
+  While events with high jet multiplicity are rare, for those events,
+  and with all matched jets being within acceptance,
+  this occurs approximately $50\%$ of the times. 
 \item {\it jets mis-assigned}: one or more jets are not assigned to
   the correct parton. It occurs about $15-25\%$ of the times for
   events where the correct jets were used in the reconstruction
-  algorithm, depending on the $b$--jet requirement.
+  algorithm, depending on the $b$--jet multiplicity requirement.
 \end{itemize}
 
 The impact of mis--reconstruction is reflected on the resolution of
-the kinematic quantities of the reconstructed \ttbar. The plots
-in Fig.~\ref{fig:reso} show the two dimensional distributions of the
-reconstructed quantities in relation to their true values. The
+the kinematic quantities of the reconstructed
+\ttbar. Fig.~\ref{fig:reso} show two dimensional distributions of
+the reconstructed quantities in relation to their true values. The
 resolution on \mtt{} and \pttt{} improves at higher values, while the
 top rapidity shows a small spread over the whole range.
 
@@ -180,25 +183,29 @@ The efficiency $\epsilon$ depends on the kinematic region
 considered. As shown in Fig.~\ref{fig:dysign}, the \dy{} reconstruction performs
 better at high \mtt{}, where the \ttbar{} pair is produced with a wide
 opening angle and large momentum. At $\mtt{}\geq1\TeV{}$, the efficiency
-starts to degrade are the top quark decay products are boosted together and
-cannot be resolved.
+starts to degrade as some of the top quark decay products cannot be
+resolved due to the large top quark boost.
 
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.495\textwidth]{figures/reconstruction/signdy_eff}
   \caption{
     \label{fig:dysign}
     Probability to reconstruct the correct \dy{} sign as a funcion of
-    the \ttbar{} invariant mass \mtt{} for the \mujets{} sample.
+    the \ttbar{} invariant mass \mtt{} in the sample with 1 $b$--jet
+    (red dots) and with at least 2 $b$--jets (blue squares).
   }
 \end{figure}
 
 The integrated efficiency $\epsilon$, measured in the \ttbar{} simulated sample,
-is $\approx75\%$. As a consequence, the inclusive asymmetry of the distribution
-of reconstructed \dy{} is diluted by a factor 
+is about $72\%$ in the sample with 1 $b$--jet and about $75\%$ in the
+sample with at least 2 $b$--jets. As a consequence, the inclusive
+asymmetry of the distribution of reconstructed \dy{} is reduced by a factor 
 \begin{equation}
   \label{eq:dilution}
-D = 2\times{}\epsilon - 1=2\times0.75-1=0.5.
-\end{equation}  
+D = 2\times{}\epsilon - 1=2\times0.75-1=0.5
+\end{equation}
+relative to its true (parton--level) value. The factor $D$ is commonly
+know as {\it dilution}.
 Table~\ref{tab:actruthreco} shows the evolution of the asymmetry
 values due to selection and reconstruction effects. 
 
@@ -265,7 +272,7 @@ requirement on reconstruction quality is applied to improve the
 resolution on reconstructed quantities.
 A 20\% reduction on the \ac{} uncertainty in the highest mass bin
 ($\mtt{}>750\GeV{}$) is achieved by requiring the logarithm of the
-likelihood ({\it log(L)}) to be $>-55$, as shown in Figure~\ref{fig:errvsllcut}.
+likelihood ($\log (L)$) to be $>-55$, as shown in Figure~\ref{fig:errvsllcut}.
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.495\textwidth]{figures/reconstruction/asymm5errVsLLcut}
   \includegraphics[width=0.495\textwidth]{figures/reconstruction/hll_muonele_7tev}
@@ -273,11 +280,13 @@ likelihood ({\it log(L)}) to be $>-55$, as shown in Figure~\ref{fig:errvsllcut}.
     \label{fig:errvsllcut}
     Evolution of the statistical uncertainty on \ac{} for
     $\mtt{}>750\GeV{}$ as a function of the minimum requirement on
-    log(L) (left) and comparison of the log(L) distribution in data
+    $\log (L)$ (left) and comparison of the log(L) distribution in data
     and prediction (right) for the combined \ljets{} channel.
   }
 \end{figure}
 The modeling of the log-likelihood is validated by comparing its
 distribution in data with the prediction.
-
-
+In the analysis at \eighttev{}, no reconstruction quality requirement
+has been applied at this stage. The study and definition of such
+requirements might help reducing the statistical uncertainty in the
+differential measurements, as in the case of the \seventev{} analysis.
