--- a/tex/results.tex
+++ b/tex/results.tex
@@ -2,36 +2,38 @@
 \label{sec:results}
 
 This section presents the unfolded \ac{} measurements at \seventev{}
-and \eighttev{}, both inclusive and differential in bins of \mtt{},
+and \eighttev{}, both inclusive and differential as a function of \mtt{},
 \pttt{} and \ytt{}. The measurements at \seventev{} have been
 published~\cite{Aad:2013cea}, while the measurements at \eighttev{}
 are internal results reported here for the purpose of this
 dissertation. The corresponding publication results are being
 finalized and are expected before the end of 2014. The results are
-compared with the corresponding measurements from CMS, and the
-results of the combination between ATLAS and CMS inclusive
-measurements at \seventev{} are summarized.
+compared with the corresponding measurements from the CMS
+Collaboration, and the results of the combination between ATLAS and
+CMS inclusive measurements at \seventev{} are summarized.
 
 \section{\ac{} measurements at \seventev{}}
 \label{sec:res7tev}
 
-The measurements are performed in the $\ell{}+\ge4$ jets sample with
-at least 1 $b$--jet. The observed \dy{} distribution in data and the
-background predictions used as input for the inclusive measurement is
-shown in Fig.~\ref{fig:dy7tev}.
+The measurements are performed in the \ljets{} sample with
+at least 1 $b$--jet (see Sec.~\ref{sec:evtsel}). The observed \dy{}
+distribution in data and the background predictions used as input for
+the inclusive measurement is shown in Fig.~\ref{fig:dy7tev}.
 
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.6\textwidth]{figures/results/dy7tev} 
-  \caption{Observed \dy{} distributions for the $\ell{}+\ge4$ jets
+  \caption{Observed \dy{} distributions for the \ljets{}
     sample with at least 1 $b$--jet. Data (dots) and SM expectations
     (solid lines) are shown. The uncertainty on the total prediction
     includes both the statistical and the systematic components.}
   \label{fig:dy7tev}
 \end{figure}
 
-The inclusive \ac{} in \ttbar{} production at \seventev{} is measured to be
-$\ac{}= 0.006\pm0.010(stat.+syst.)$, compatible with the SM prediction,
-$\ac{}=0.0123\pm0.0005$ (see Sec.~\ref{sec:topca}).
+Following the unfolding procedure described in
+Sec.~\ref{sec:unfolding}, the inclusive \ac{} in \ttbar{} production
+at \seventev{} is measured to be $\ac{}=
+0.006\pm0.010(\rm{stat.}+\rm{syst.})$, compatible with the SM
+prediction, $\ac{}=0.0123\pm0.0005$ (see Sec.~\ref{sec:topca}).
 Table~\ref{tab:results} summarizes the
 measurements and predictions for the inclusive asymmetry, at high
 invariant mass of the \ttbar{} pair ($\mtt{} >600 \GeV{})$, and at
@@ -54,7 +56,7 @@ statistical and systematic components.
 \caption{Measured inclusive \ac{} compared with SM
   predictions. The measurements with the \qqbar{}--enhancing
   $\beta_{z,\ttbar} > 0.6$ requirement and at high \ttbar{} invariant
-  mass $\mtt{} > 600 \GeV{}$ are also included. The uncertainties
+  mass $\mtt{} > 600 \GeV{}$ are also reported. The uncertainties
   include statistical and systematic components.}
 \label{tab:results}
 \end{table}
@@ -76,17 +78,16 @@ uncertainty on the jet energy scale and resolution.
 \begin{table}[!htb]\centering
 \begin{tabular}{l c c c}
 \toprule
-Source of systematic uncertainty  & \multicolumn{2}{c}{$\delta{\ac{}}$} \\
-\midrule
+\multirow{2}{*}{Source of systematic uncertainty}  & \multicolumn{2}{c}{$\delta{\ac{}}$} \\
   & Inclusive & $\mtt{} >600\GeV{}$ & $\betatt{}>0.6$ \\
 \midrule
 Lepton reconstruction/identification    & $<0.001$ & $<0.002$ & $<0.002$\\
 Lepton energy scale and resolution      & $0.003$    & $0.003$   &  $0.003$\\
 Jet energy scale and resolution             & $0.003$    & $0.003$   &
 $0.005$ \\
-Missing transverse momentum and pile--up modeling & $0.002$ & $0.002$
+Missing transverse momentum           & $0.002$ & $0.002$
 & $0.004$\\
-Multi--jets background normalisation    & $<0.001$ & $<0.002$ & $<0.002$\\
+Multijet background normalisation    & $<0.001$ & $<0.002$ & $<0.002$\\
 $b$--tagging/mis--tag efficiency         & $<0.001$  & $<0.002$ & $<0.002$\\
 Signal modeling                                       & $<0.001$ &
 $<0.002$ & $<0.002$\\
@@ -95,30 +96,33 @@ Monte Carlo statistics                         & $0.002$  & $<0.002$ & $<0.002$\
 PDF                                                      & $0.001$  & $<0.002$  & $<0.002$\\
 $W$+jets normalisation and shape     & $0.002$  & $<0.002$ & $<0.002$\\
 \midrule
-Statistical uncertainty                          & $0.010$ & $0.021$ & $0.017$\\
+Statistical uncertainty                         & $0.010$ & $0.021$ & $0.017$\\
+\midrule
+Total uncertainty                                & $0.010$ & $0.022$ & $0.018$\\
 \bottomrule
 \end{tabular}
 \caption{Impact of individual sources of uncertainty on the inclusive
   \ac{}, \mbox{$\ac{}(\betatt{}>0.6)$} and \mbox{$\ac{}(\mtt{}>600
-    \GeV{})$} at \seventev{}. Variations below $10\%$ of the
+    \GeV{})$} measurements at \seventev{}. Variations below $10\%$ of the
   statistical uncertainty, quoted as ``$<0.001$'' and ``$<0.002$'',
-  are considered negligible.}
+  are considered negligible. The total uncertainty obtained from the
+  marginalization procedure is quoted for reference.}
 \label{tab:systematics}
 \end{table}
 
-The \ac{} differential measurements as functions of
+The differential \ac{} measurements as functions of
 \mtt{}, \pttt{} and \ytt{} are compared in Fig.~\ref{fig:unfac_diff}
 with the SM predictions and found to be consistent. 
 In addition, the results are compared with new physics predictions for
 color octets ({\it axigluons}) with masses of $m=300 \GeV{}$ and $7
 \TeV{}$~\cite{AguilarSaavedra:2011ci}. Both models would not
-be observable in direct searches as \ttbar{} resonances: the light
-axigluon mass is below the threshold for \ttbar{} production, while
-the one of $m=7 \TeV$ is beyond the kinematic reach of the current LHC
-searches at \seventev{} and \eighttev{}. In both scenarios the new
-physics couplings with top and light quarks are tuned to yield a
-forward--backward asymmetry compatible with the results reported by
-Tevatron experiments.
+be observable in direct searches as \ttbar{} resonances: in the case
+of $m=300\GeV$, the light axigluon mass would be below the threshold
+for \ttbar{} production, while the case of $m=7 \TeV$ is beyond the
+kinematic reach of the current LHC searches at \seventev{} and
+\eighttev{}. In both scenarios the new physics couplings with top and
+light quarks are tuned to yield a forward--backward asymmetry
+compatible with the results reported by Tevatron experiments.
 The \ac{} spectrum as a function of the \ttbar{} invariant mass \mtt{}
 with the additional requirement on the $z$--component of high velocity
 of the \ttbar{} system, $\betatt{}>0.6$, is also shown in
@@ -136,10 +140,10 @@ predictions.
   } \quad
   \subfloat[][]
   {  \includegraphics[width=0.45\textwidth]{figures/results/dy_mtt_beta} }
-  \caption{Measured \ac{} spectra compared with predictions for SM and
-    for a color--octet axigluon with a mass of 300 GeV (red lines) and
-    7000 GeV (blue lines) 
-    as functions of \mtt{} (a), \pttt{} (b) and \ytt{} (c). The
+  \caption{Measured \ac{} spectra compared with predictions for the SM
+    only and with the addition of a color--octet axigluon with a mass
+    of 300 GeV (red lines) and 7000 GeV (blue lines).
+    The measurements are presented as functions of \mtt{} (a), \pttt{} (b) and $|\ytt{}|$ (c). The
     asymmetry as a function of \mtt{} with $\betatt{}>0.6$ is also
     shown (d). The uncertainties include statistical and systematic
     components.}
@@ -175,31 +179,32 @@ measurement as a function of \mtt{}.
 The corresponding tables for the other differential measurements are
 collected in App.~\ref{app:correlations}.
 
-\subsection{Comparison of ATLAS and CMS results}
+\subsection{Comparison between ATLAS and CMS measurements}
 
 Analogous measurements of the asymmetry \ac{} at \seventev{} have been
-performed by the CMS collaboration~\cite{Chatrchyan:2012cxa}, who
+performed by the CMS Collaboration~\cite{Chatrchyan:2012cxa}, who
 reported an inclusive asymmetry
 $\ac{}=0.004\pm0.010(stat.)\pm0.011(syst.)$.
 The results are compatible with the SM predictions and with the
-measurements presented in this thesis. 
-With about 46000 \ttbar{} events, CMS sample has a similar size to the
-ATLAS one ($\sim50000$ events); thus the statistical uncertainties are
-of similar size. On the other hand systematic uncertainties in the CMS
+measurements presented in this dissertation. 
+With about 46000 \ttbar{} events, the CMS sample has a similar size to the
+ATLAS sample ($\sim50000$ events); thus the statistical uncertainties are
+of similar size. On the other hand the systematic uncertainties in the CMS
 measurement are significantly larger, due to the impact of the signal
-modeling used in the unfolding algorithm (SVD).
+modeling uncertainty in the unfolding algorithm (SVD) used.
 
-The ATLAS and CMS inclusive \ac{} results are combined in order to
-obtain a more precise measurement~\cite{ATLAS-CONF-2014-012}. The
-combination is performed using the Best Linear Unbiased Estimate
+The inclusive \ac{} measurements by the ATLAS and CMS Collaborations
+are combined in order to obtain a more precise
+measurement~\cite{ATLAS-CONF-2014-012}. 
+The combination is performed using the Best Linear Unbiased Estimate
 (BLUE)~\cite{Lyons:1988rp,Valassi:2003mu}, where the correlation of
 systematic uncertainties is taken into account. In particular, signal
 modeling and PDF uncertainties are considered fully correlated between
 ATLAS and CMS results, while a 50\% correlation is assigned to the
 \wjets{} normalization uncertainty, as data (uncorrelated) and
-simulation (correlated) are both used to estimate the this
-background. All uncertainties related with the detector description
-are instead considered not correlated. Since the ATLAS results is
+simulation (correlated) are both used to estimate this
+background. All uncertainties related to the detector description
+are considered not correlated. Since the ATLAS results is
 dominated by the statistical uncertainty (uncorrelated), the combined
 results is insensitive to variations of these choices. The combined
 result is found to be $0.005\pm0.007(stat.)\pm0.006(syst.)$,
@@ -229,7 +234,11 @@ comparison is shown in Fig.~\ref{fig:comparediff7tev}.
   \includegraphics[width=0.475\textwidth]{figures/results/dy_yttcms} 
   \caption{Comparison of the differential \ac{} measurements by ATLAS
     (left) and CMS (right) as a function of \mtt{} (top), \pttt{}
-    (center) and |\ytt{}| (bottom) at \seventev{}.} 
+    (center) and $|\ytt{}|$ (bottom) at \seventev{}. The measurements
+    by CMS are compared with the prediction for the SM (blue line), a
+    new physics model with an
+    effective axial--vector coupling (green line), and the prediction from
+    the \powheg{} generator (red line).} 
   \label{fig:comparediff7tev}
 \end{figure}
 
@@ -268,7 +277,7 @@ important complementarity of \ac{} and \afb{}.
 \label{sec:res8tev}
 
 As discussed in Sec.~\ref{sec:wjets}, the measurements at \eighttev{}
-are performed using six sub-samples of $\ell{}+\ge4$ jets events,
+are performed using six sub-samples of \ljets{} events,
 where, simultaneously, the background normalizations are fitted and
 the parton--level \dy{} distribution is
 estimated. Figure~\ref{fig:dy8tev} shows the comparison between
@@ -296,10 +305,10 @@ $\ac{}= 0.011\pm0.006(stat.+syst.)$, compatible with the SM prediction,
 $\ac{}=0.0111\pm0.0004$. The improvement in precision with respect to
 the measurement at \seventev{} is due to the reduction of the
 statistical uncertainty that, with a \ttbar{} sample six times larger,
-is of $0.005$. 
+is of only $0.005$. 
 
 Since the background estimation is part of the bayesian inference
-procedure described in Sec.~\ref{sec:unfolding}, it's not possible to
+procedure described in Sec.~\ref{sec:unfolding}, it is not possible to
 study the impact of systematic uncertainties by repeating unfolding on data with
 varied templates, without using marginalization. Instead, the expected
 impact of systematic uncertainties is studied with pseudo-data distributions
@@ -314,7 +323,7 @@ $|\ac{}(+1\sigma)-\ac{}(-1\sigma)|/2$.
 As in the measurements at \seventev{}, the precision is dominated by
 the statistical uncertainty, and the main sources of systematic
 uncertainty are the signal modeling, possibly affected by the limited
-MC statistics, and the ones with a large impact on the size of the
+MC statistics, and the uncertainties with a large impact on the size of the
 \wjets{} background, such as the uncertainty on the jet energy scale
 and resolution. 
 
@@ -327,8 +336,8 @@ Lepton reconstruction/identification    & $<0.0005$\\
 Lepton energy scale and resolution      &  $0.0007$\\
 Jet reconstruction efficiency                 &  $<0.0005$ \\
 Jet energy scale and resolution             &  $0.0017$ \\
-Missing transverse momentum and pile--up modeling& $<0.0005$\\
-Multi--jets background normalization & $<0.0005$\\
+Missing transverse momentum       & $<0.0005$\\
+Multijet background normalization & $<0.0005$\\
 Other backgrounds normalization        & $<0.0005$\\
 $b$--tagging/mis--tag efficiency       & $<0.0005$\\
 Signal modeling                                    & $0.0032$\\
@@ -344,12 +353,12 @@ Total uncertainty                                   & $0.006$ \\
 \end{tabular}
 \caption{
   Impact of individual sources of uncertainty on the inclusive
-  \ac{} at \eighttev{}. Variations below $10\%$ of the statistical
+  \ac{} measurement at \eighttev{}. Variations below $10\%$ of the statistical
   uncertainty are quoted as ``$<0.0005$'' and considered negligible.}
 \label{tab:8tevsystematics}
 \end{table}
 
-The asymmetry spectrum as a function of \mtt{} is compared in
+The \ac{} spectrum as a function of \mtt{} is compared in
 Fig.~\ref{fig:8tevacvsmtt} with the theoretical SM predictions.
 As for the \seventev{} measurements, the results are compared with new
 physics predictions for right--handed color octets with low and high
@@ -359,7 +368,7 @@ tuned to be compatible with the Tevatron \afb{} measurements and the
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.6\textwidth]{figures/results/acvsmtt8tev}
   \caption{Measured \ac{} spectrum as a function of \mtt{} at
-    \seventev{} compared with predictions for SM (green lines) and for right--handed
+    \eighttev{} compared with predictions for SM (green lines) and for right--handed
     color octets with masses below the \ttbar{} threshold (red lines) and beyond
     the kinematic reach of current LHC searches (blue line).}
   \label{fig:8tevacvsmtt}
@@ -392,27 +401,34 @@ systematic uncertainties is detailed in App.~\ref{app:correlations}.
 \label{tab:corr_mtt8tev}
 \end{table}
 
-\subsection{Comparison of ATLAS and CMS results}
+\subsection{Comparison between ATLAS and CMS measurements}
 
 Preliminary results at \eighttev{} from the CMS
-collaboration~\cite{CMS-PAS-TOP-12-033} include the measurement of
+Collaboration~\cite{CMS-PAS-TOP-12-033} include the measurement of
 \ac{}, inclusively and as a function of \mtt{}, \pttt{} and \ytt{}.
 The reported inclusive asymmetry
 \mbox{$\ac{}=0.005\pm0.007(stat.)\pm0.006(syst.)$} is compatible with the SM
-predictions and with the measurement presented in this dissertation
-with a total uncertainty about twice as large. Both
+predictions and, with a total uncertainty about twice as large, with
+the measurement presented in this dissertation. Both
 statistical and systematic uncertainties are larger than the ones
 reported in this work. The statistical precision is presumably
 degraded by the use of a large number of \dy{} bins in the unfolding
 procedure, while the larger impact of all systematic components
 points to a less precise background estimation.
 Figure~\ref{fig:comparediff8tev} shows a side--by--side comparison of
-the ATLAS and CMS measurements as a function of \mtt{}.
+the ATLAS and CMS measurements as a function of \mtt{}. A finer
+binning is used in the ATLAS measurement, up to
+high mass values $\mtt{}>900\GeV$, which is important to probe new
+physics effect. Updated measurements by CMS with a consistent binning
+choice are expected, and the combination of differential measurements,
+as well as inclusive, is foreseen.
 
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.475\textwidth]{figures/results/acvsmtt8tev}
   \includegraphics[width=0.475\textwidth]{figures/results/acvsmtt8tevcms}
   \caption{Comparison of the differential \ac{} measurements by ATLAS
-    (left) and CMS (right) as a function of \mtt{} at \eighttev{}.} 
+    (left) and CMS (right) as a function of \mtt{} at \eighttev{}. The measurements
+    by CMS are compared with the prediction for the SM (blue and gray lines) and
+    new physics models with an effective axial--vector coupling (green lines).} 
   \label{fig:comparediff8tev}
 \end{figure}
